Layouts/admin/default.phpで使用されているJSを連結して圧縮するように変更

--- a/lib/Baser/webroot/admin_origin/package.json
+++ b/lib/Baser/webroot/admin_origin/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-image": "~0.9.0"
+    "grunt-image": "~0.9.0",
+    "grunt-contrib-uglify": "~0.6.0"
   }
 }
